--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,7 +1,7 @@
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/Ressources/Statique/Level/Level_1.Level_1
+GameDefaultMap=/Game/Ressources/Statique/Level/MainMenu.MainMenu
 GlobalDefaultGameMode=/Game/Ressources/Dynamique/BP/BP_Cycle_3_GameModeBase.BP_Cycle_3_GameModeBase_C
-EditorStartupMap=/Game/Ressources/Statique/Level/Level_1.Level_1
+EditorStartupMap=/Game/Ressources/Statique/Level/Level.Level
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
 TargetedHardwareClass=Desktop
@@ -16,5 +16,4 @@ AppliedDefaultGraphicsPerformance=Maximum
 
 [URL]
 GameName=Cycle_3_SXB_NL_2022
-
 
